[package]
name = "pam_saslauthd"
version = "0.1.0"
edition = "2021"

authors = [
    "William Brown <william@blackhats.net.au>",
    ]
rust-version = "1.64"
license = "MPL-2.0"
homepage = "https://github.com/Firstyear/pam_saslauthd/"
repository = "https://github.com/Firstyear/pam_saslauthd/"

[lib]
name = "pam_saslauthd"
crate-type = [ "cdylib" ]
path =  "src/lib.rs"

[dependencies]
libc = "^0.2.135"

[build-dependencies]
pkg-config = "^0.3.26"

